fixed off center selection images

--- a/src/styles/misery.scss
+++ b/src/styles/misery.scss
@@ -42,9 +42,9 @@ select {
   font-weight: bold;
   display: inline-block;
   font-size: 18px;
+  cursor: pointer;
   &:hover {
     background-color: $dark_green;
-    cursor: pointer;
   }
 }
 
@@ -108,9 +108,8 @@ select {
 }
 
 #sports_selection {
-  ul {
-    list-style-type: none;
-  }
+  margin-left: auto;
+  margin-right: auto;
 
   li {
     display: inline-block;
@@ -123,8 +122,7 @@ select {
   }
 
   label {
-    border: 1px solid #fff;
-    padding: 6px;
+    padding: 1px;
     display: inline-block;
     position: relative;
     cursor: pointer;
@@ -168,6 +166,7 @@ select {
     content: "✓";
     background-color: $green;
     transform: scale(1);
+    z-index: 1;
   }
 
   :checked + label img {
